syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.tianyl.grpcDemo.service";
option java_outer_classname = "TimeProto";

package grpcDemo;

service TimeService{
	
	rpc time (TimeRequest) returns (TimeResponse) {}
	
}

message TimeRequest {
	string name = 1;
}

message TimeResponse {
	string msg = 1;
}